# zendkash.github.io

./: .education.md.swp  .gitignore  :  AutonomousWiSAR.md  CNAME  DEPLOYMENT.md  GEMINI.md  Gemfile  README.md  _config.yml  contact.md  education.md  experience.md  index.md  main.py  other.md  pelicanconf.py  publications.md  publishconf.py  pyproject.toml  requirements.txt  research1.md  run_jekyll_serv.bat
.gemini/: settings.json
.github/workflows/: deploy.yml
_includes/: head.html  sidebar.html
_layouts/: default.html  post.html
content/pages/: AutonomousWiSAR.md  contact.md  education.md  experience.md  index.md  other.md  publications.md
content/pages/jp/: AutonomousWiSAR.md  contact.md  education.md  experience.md  index.md  other.md  publications.md
content/static/: CNAME
en/: contact.md  publications.md
experimental-apps/boids-app/: boids.js
jp/: AutonomousWiSAR.md  contact.md  education.md  experience.md  index.md  other.md  publications.md  research1.md
output/: archives.html  authors.html  categories.html  index.html  tags.html
output/AutonomousWiSAR/: index.html
output/contact/: index.html
output/education/: index.html
output/experience/: index.html
output/index/: index.html
output/jp/: archives.html  authors.html  categories.html  index.html  tags.html
output/jp/AutonomousWiSAR/: index.html
output/jp/contact/: index.html
output/jp/education/: index.html
output/other/: index.html
output/publications/: index.html
public/css/: hyde.css  poole.css
theme/templates/: base.html  index.html  page.html
(+9 files in other folders)
