[project]
name = "zendkash-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "markdown>=3.10",
    "pelican>=4.11.0.post0",
    "pelican-i18n-subsites>=1.0.0",
    "typogrify>=2.1.0",
    "watchfiles>=1.1.1",
]
